projet_gl/src/test/deca/context/valid/3_70/3_70_1_Field_ident.deca
// Description:
//    Programme minimaliste faisant un field_ident
//
// Resultats:
//
// Historique:
//    cree le 19/01/2024

class A {
    int x;
    float y;
    boolean z;
}

{
    A a = new A();
    a.x;  
    a.y;
    a.z;  
}